syntax = "proto3";

import "google/protobuf/any.proto";
import "google/protobuf/empty.proto";

package grpcstub;

service GrpcStub {
    rpc GetSettings(google.protobuf.Empty) returns (SettingsResponse) {}
    rpc SetSetting(SetSettingRequest) returns (SetSettingResponse) {}
}

message SettingsResponse {
    repeated Setting settings = 1;
}

message Setting {
    string name = 1;
    string type = 2;
    google.protobuf.Any value = 3;
}

message SetSettingRequest {
    string name = 1;
    google.protobuf.Any value = 2;
}

message SetSettingResponse {
    bool success = 1;
    string error = 2;
}